{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 18,
  "lineage": "4823a908-f1fc-e8b3-25ec-a22f9b165e1d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "intgtway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:361317615039:internet-gateway/igw-0927c01d3633740ab",
            "id": "igw-0927c01d3633740ab",
            "owner_id": "361317615039",
            "tags": {
              "Name": "intgtway"
            },
            "tags_all": {
              "Name": "intgtway"
            },
            "vpc_id": "vpc-0520b6e38e6e915f4"
          },
          "dependencies": [
            "aws_vpc.my_tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "acl1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:361317615039:network-acl/acl-0c36b82f1cf219016",
            "egress": [],
            "id": "acl-0c36b82f1cf219016",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "190.160.0.0/16",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 22
              }
            ],
            "owner_id": "361317615039",
            "subnet_ids": [],
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-0520b6e38e6e915f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "acl1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "190.160.0.0/16",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-378739670",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0c36b82f1cf219016",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 200,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.acl1",
            "aws_vpc.my_tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "routetable1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:361317615039:route-table/rtb-0ad2b589549a9ef7c",
            "id": "rtb-0ad2b589549a9ef7c",
            "owner_id": "361317615039",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0927c01d3633740ab",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "routetable1"
            },
            "tags_all": {
              "Name": "routetable1"
            },
            "vpc_id": "vpc-0520b6e38e6e915f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.intgtway",
            "aws_vpc.my_tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:361317615039:security-group/sg-02b7df14e16aa22f2",
            "description": "allow my app traffic",
            "egress": [],
            "id": "sg-02b7df14e16aa22f2",
            "ingress": [],
            "name": "sg1",
            "name_prefix": "",
            "owner_id": "361317615039",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ab4dad8226d3833c"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:361317615039:subnet/subnet-056728ea1b39e253e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "190.160.1.0/24",
            "id": "subnet-056728ea1b39e253e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "361317615039",
            "tags": {
              "Name": "subnet1"
            },
            "tags_all": {
              "Name": "subnet1"
            },
            "vpc_id": "vpc-0520b6e38e6e915f4"
          },
          "dependencies": [
            "aws_vpc.my_tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_tf_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:361317615039:vpc/vpc-0520b6e38e6e915f4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "190.160.0.0/16",
            "default_network_acl_id": "acl-0831c16dabc2b4917",
            "default_route_table_id": "rtb-00f1ba36e60491464",
            "default_security_group_id": "sg-0f24cc7031a4efc69",
            "dhcp_options_id": "dopt-06949852653225bda",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0520b6e38e6e915f4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00f1ba36e60491464",
            "owner_id": "361317615039",
            "tags": {
              "Location": "Srilanka",
              "Name": "my_tf_vpc"
            },
            "tags_all": {
              "Location": "Srilanka",
              "Name": "my_tf_vpc"
            }
          }
        }
      ]
    }
  ]
}